Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18158

CMake Server Mode: wrong working directory

XMLWordPrintable

      QtCreator does not respect a changed output directory. Applications are started from the right location, but the working directory is wrong. The working dir points to the default build directory.

        1. CMakeTest_binaryDir.zip
          2 kB
          Stefan Sommerfeld
        For Gerrit Dashboard: QTCREATORBUG-18158
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            zerocom Stefan Sommerfeld
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes